# DZUMI

./: .env.example  .gitignore  README.md  cli.py  config.py  dependencies.py  pyproject.toml  todo.py
dao/: __init__.py  base_dao.py  documents_dao.py  documet_attributes_dao.py  items_dao.py  objects_dao.py  order_items_dao.py  orders_dao.py  roles_dao.py  trusted_suppliers_dao.py  users_dao.py
models/: __init__.py  base.py  document.py  document_attribute.py  item.py  object.py  order.py  order_items.py  role.py  trusted_supplier.py  user.py
patterns/: builder.py  observer.py
rest/: auth_controller.py  documents_controller.py  items_controller.py  orders_controller.py  user_controller.py
services/: documents_service.py  items_service.py  orders_service.py  user_service.py
