[project]
name="dzumi"
version="0.1.0"
authors=[
    {name = ["googlehater", email = ""]},
    {name = ["obezyan21", email = ""]}
]
description = "dzumi aaaa"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dotenv>=0.9.9",
    "greenlet>=3.2.3",
    "python-dotenv>=1.1.1",
    "SQLAlchemy>=2.0.41",
    "typing-extensions>=4.14.1"
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
